react app unit testing with jest & rtl

--- a/todoapp-react/package.json
+++ b/todoapp-react/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!@codemirror)/\"",
     "eject": "react-scripts eject",
     "server": "json-server-auth --watch db.json --port=4000"
   },
