--- a/todoapp-react/package.json
+++ b/todoapp-react/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0"
+    "json-server-auth": "^2.1.0",
+    "msw": "^0.47.4"
   }
 }
